MET-4236 Base code for solution